<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/sympuzz"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/white_border"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="55sp"
        android:fontFamily="@font/aqum_two"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/pill"
        android:layout_width="311dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/sympuzz"
        android:layout_marginTop="20dp"
        card_view:srcCompat="@drawable/pill"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/regcardview"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/pill"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_border"
        app:cardCornerRadius="43dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/regtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_text"
                android:textColor="@color/blue"
                android:textSize="33sp"
                android:fontFamily="@font/aqum_two"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/blue_border"
                android:padding="8dp"
                android:hint="@string/username"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textSize="15sp"
                android:drawableLeft="@drawable/baseline_account_box_24"
                android:drawablePadding="8dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/blue_border"
                android:padding="8dp"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textSize="15sp"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/dateofbirth"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/blue_border"
                android:padding="8dp"
                android:hint="@string/dateofbirth"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textSize="15sp"
                android:drawableLeft="@drawable/baseline_calendar_month_24"
                android:drawablePadding="8dp"
                android:inputType="date"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/blue_border"
                android:padding="8dp"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textSize="15sp"
                android:drawableLeft="@drawable/baseline_password_24"
                android:drawablePadding="8dp"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/regbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blue"
                android:text="@string/register_text"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:fontFamily="@font/aqum_two"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/logquestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/logquestion"
                    android:textColor="@color/blue"
                    android:textSize="12sp"
                    android:fontFamily="@font/aqum_two"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/logtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/login_text"
                    android:textColor="@color/darkblue"
                    android:textSize="12sp"
                    android:fontFamily="@font/aqum_two"
                    android:textAlignment="center"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/puzzimage"
        android:layout_width="311dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/regcardview"
        android:layout_marginTop="20dp"
        card_view:srcCompat="@drawable/puzz"/>

</RelativeLayout>